<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">mario_s_application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_vs">VS</string>
    <string name="lbl_december_2023">December, 2023</string>
    <string name="lbl_sunday">Sunday</string>
    <string name="lbl_ver_equipos">Ver Equipos</string>
    <string name="lbl2">************</string>
    <string name="lbl_fp">+FP</string>
    <string name="lbl_we">We</string>
    <string name="lbl_editar_perfil">Editar Perfil</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_calendario">Calendario</string>
    <string name="lbl_boston_celtics">Boston Celtics</string>
    <string name="lbl_mo">Mo</string>
    <string name="msg_recuperar_cont">Recuperar  Contraseña</string>
    <string name="lbl_posicion">Posicion</string>
    <string name="lbl_registar">Registar</string>
    <string name="lbl_mayo_2023">Mayo, 2023</string>
    <string name="lbl_crear_jugador2">Crear Jugador</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="msg_edad_de_nacimie">Edad de Nacimiento</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_november_2023">November, 2023</string>
    <string name="lbl_tl">+TL</string>
    <string name="lbl_new_york_knicks">New York Knicks</string>
    <string name="msg_repetir_contras">Repetir Contraseña</string>
    <string name="lbl_tu">Tu</string>
    <string name="lbl_save_changes">Save changes</string>
    <string name="lbl_crear_equipo">Crear Equipo</string>
    <string name="lbl_crear">Crear</string>
    <string name="lbl_july_2023">July, 2023</string>
    <string name="msg_example_gmail_c">example@gmail.com</string>
    <string name="lbl_logo">Logo</string>
    <string name="lbl_june_2022">June, 2022</string>
    <string name="lbl_indiana_pacers">Indiana Pacers</string>
    <string name="lbl_crear_jugador">Crear Jugador </string>
    <string name="lbl_september_2023">September, 2023</string>
    <string name="lbl_julio_2023">Julio, 2023</string>
    <string name="lbl_30">30</string>
    <string name="lbl_february_2023">February, 2023</string>
    <string name="lbl_31">31</string>
    <string name="msg_ver_estadistica">Ver Estadisticas
de Partido</string>
    <string name="lbl_23_05_1995">23/05/1995</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_per">+PER</string>
    <string name="lbl_base">Base</string>
    <string name="lbl_march_2023">March, 2023</string>
    <string name="lbl_atlanta_hawks">Atlanta Hawks</string>
    <string name="lbl_dorsal">Dorsal</string>
    <string name="msg_ubicacion_del_p">Ubicacion del Pabellon</string>
    <string name="lbl_cerrar_sesion">Cerrar Sesion</string>
    <string name="lbl_th">Th</string>
    <string name="lbl_20">20</string>
    <string name="lbl_t2">+T2</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="lbl_enero_2023">Enero, 2023</string>
    <string name="lbl_ciudad">Ciudad</string>
    <string name="lbl_t3">+T3</string>
    <string name="lbl_22">22</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_detroit_pistons">Detroit Pistons</string>
    <string name="lbl_29">29</string>
    <string name="lbl_iniciar_sesion">Iniciar Sesion</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_actubre_2023">Actubre, 2023</string>
    <string name="lbl_crear_partido">Crear Partido</string>
    <string name="lbl_junio_2023">Junio, 2023</string>
    <string name="lbl_antonio_alvarez">Antonio
Alvarez</string>
    <string name="msg_acepta_para_rec">Acepta para recuperar contraseña</string>
    <string name="lbl_febrero_2023">Febrero, 2023</string>
    <string name="lbl_paco_jimenez">Paco
Jimenez</string>
    <string name="lbl_chicago_bulls">Chicago Bulls</string>
    <string name="msg_has_olvidado_la">Has olvidado la contraseña?</string>
    <string name="lbl_marzo_2023">Marzo, 2023</string>
    <string name="lbl_barcelona">Barcelona</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_agosto_2022">Agosto, 2022</string>
    <string name="lbl_15">15</string>
    <string name="lbl_t32">-T3</string>
    <string name="lbl_210">2</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="lbl">&gt;</string>
    <string name="lbl_august_2022">August, 2022</string>
    <string name="lbl_escolta">Escolta</string>
    <string name="lbl_noviembre_2023">Noviembre, 2023</string>
    <string name="msg_philadelphia_76">Philadelphia 76ers</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_nom">Nom</string>
    <string name="lbl_as">+AS</string>
    <string name="lbl_alberto_cateta">Alberto
Cateta</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_registrarse">Registrarse</string>
    <string name="lbl_01">01</string>
    <string name="lbl_1">1</string>
    <string name="lbl_baskstats">BaskStats</string>
    <string name="lbl_02">02</string>
    <string name="lbl_may_2022">May, 2022</string>
    <string name="lbl_tl2">-TL</string>
    <string name="lbl_4">4</string>
    <string name="lbl_05">05</string>
    <string name="lbl_enviar">Enviar</string>
    <string name="lbl_06">06</string>
    <string name="lbl_6">6</string>
    <string name="lbl_03">03</string>
    <string name="lbl_7">7</string>
    <string name="lbl_diciembre_2023">Diciembre, 2023</string>
    <string name="lbl_04">04</string>
    <string name="lbl_09">09</string>
    <string name="lbl_t22">-T2</string>
    <string name="lbl_guardar">Guardar</string>
    <string name="lbl_07">07</string>
    <string name="lbl_abril_2023">Abril, 2023</string>
    <string name="lbl_08">08</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_brooklyn_nets">Brooklyn Nets</string>
    <string name="lbl_milwaukee_bucks">Milwaukee Bucks</string>
    <string name="lbl_april_2023">April, 2023</string>
    <string name="lbl_october_2023">October, 2023</string>
    <string name="msg_nueva_contrase">Nueva Contraseña</string>
    <string name="msg_cleveland_caval">Cleveland Cavaliers</string>
    <string name="lbl_acepta">Acepta</string>
    <string name="lbl_toronto_raptors">Toronto Raptors</string>
    <string name="lbl_jose_momtoya">Jose Momtoya</string>
    <string name="lbl_marco_garcia">Marco
Garcia</string>
    <string name="msg_recuperar_contr">Recuperar Contraseña:</string>
    <string name="msg_charlotte_horne">Charlotte Hornets
</string>
    <string name="lbl_january_2023">January, 2023</string>
    <string name="equipos">EQUIPOS</string>
    <string name="jugadores">JUGADORES</string>

    <string name="msg_septiembre_202">Septiembre, 2023</string>
    <string name="lbl_saturday">Saturday</string>
    <string name="lbl_contrase_a">Contraseña</string>
    <string name="lbl_reb">+REB</string>
    <string name="lbl_rec">+REC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
