<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearCrearEquipo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    style="@style/groupStyle_4">



    <LinearLayout
        android:id="@+id/linearColumncrearequipo"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageImageNine"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/img_image9" />

        <TextView
            android:id="@+id/txtCrearEquipo"
            style="@style/txtOutfitbold25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_65pxv"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/lbl_crear_equipo"
            tools:text="@string/lbl_crear_equipo" />

        <EditText
            android:id="@+id/NombreCrearEquipo"
            style="@style/etSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25pxv"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_nombre"
            android:inputType="text"
            android:paddingStart="@dimen/_28pxh"
            android:paddingTop="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:textColorHint="@color/gray_601"
            tools:ignore="Autofill"

            />

        <EditText
            android:id="@+id/UbiCrearEquipo"
            style="@style/etSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21pxv"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:drawableStart="@drawable/img_linkedin"
            android:drawablePadding="@dimen/_6pxh"
            android:ellipsize="end"
            android:hint="@string/msg_ubicacion_del_p"
            android:inputType="text"
            android:paddingStart="@dimen/_28pxh"
            android:paddingTop="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:textColorHint="@color/gray_601"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSeleccionarLogo"
            style="@style/btnSolidRounded_1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21pxv"
            android:text="Logo"
            android:textAllCaps="false"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/_16pxv"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCrear"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_98pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/lbl_crear"
            android:textAllCaps="false"
            tools:text="@string/lbl_crear" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
