<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameCrearJugadord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/groupStyle_4">

    <LinearLayout
        android:id="@+id/linearColumnarrowleft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_36pxh"
        android:layout_marginTop="@dimen/_34pxv"
        android:layout_marginEnd="@dimen/_36pxh"
        android:layout_marginBottom="@dimen/_20pxv"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginEnd="@dimen/_9pxh"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:id="@+id/linearRowarrowleft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageArrowleft"
                    android:layout_width="@dimen/_9pxh"
                    android:layout_height="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" />


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imageImageNine"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/img_image9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLanguage"
            style="@style/txtOutfitbold25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_67pxv"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/lbl_crear_jugador"
            tools:text="@string/lbl_crear_jugador" />

        <EditText
            android:id="@+id/CreraJugadorNombre"
            style="@style/etSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_nombre"
            android:inputType="text"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:singleLine="true"
            android:textColorHint="@color/gray_601"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/CrearApellido"
            style="@style/etSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_apellido"
            android:inputType="text"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:singleLine="true"
            android:textColorHint="@color/gray_601"
            app:layout_constraintTop_toBottomOf="@id/CreraJugadorNombre"
            tools:ignore="Autofill" />

        <Spinner
            android:id="@+id/CrearDorsalSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_4pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:textColorHint="@color/gray_601"
            app:layout_constraintTop_toBottomOf="@id/CrearApellido"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/CrearPosicion"
            style="@style/etSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_posicion"
            android:inputType="text"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_6pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:singleLine="true"
            android:textColorHint="@color/gray_601"
            app:layout_constraintTop_toBottomOf="@id/CrearDorsalSpinner"
            tools:ignore="Autofill" />
        <Spinner
            android:id="@+id/AsignarEquipoSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_bg_gray_100_border_orange_700_radius_8"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_4pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:textColorHint="@color/gray_601"
            app:layout_constraintTop_toBottomOf="@id/CrearApellido"
            tools:ignore="Autofill" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCrear"
            style="@style/btnSolidRounded_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/lbl_crear"
            android:textAllCaps="false"
            tools:text="@string/lbl_crear" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
